kubernetes/apps/ai/open-webui/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  annotations:
    gatus.home-operations.com/endpoint: |-
      path: /health
      conditions: ["[STATUS] == 200"]
spec:
  hostnames:
    - chat.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: open-webui
          port: 8080
